--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
 </head>
 <body>
     <h3>Prueba de Git</h3>
-    <p>git init -> repos local crea una carpeta oculta en mi carpeta de proyecto<br>
-
-        git clone http://....(url del repo)-> descarga del repo remoto<br>
-        git status -> estado del repo<br>
-        git add -> "que vigile" los ficheros</p>
+    <p>Hola que tal!!!!!</p>
 </body>
 </html>
