--- a/pagina2.html
+++ b/pagina2.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h4>HOla estoy en la rama prueba para hacer commit y merge</h4>
 </body>
 </html>
