comit conflicto rama

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h3>Prueba de Git</h3>
     <p>Hola que tal!! Menudo lio de comandos!!!</p>
+    <h4>Prueba de conflicto en commit. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Asperiores debitis consequuntur qui non quibusdam blanditiis! Voluptatum deleniti 
+        quisquam fuga facilis nobis ipsum voluptate, obcaecati non perferendis sunt amet magni aperiam.</h4>
 </body>
 </html>
