comit conflicto master

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h3>Prueba de Git</h3>
     <p>Hola que tal!! Menudo lio de comandos!!!</p>
+    <h3>Texto para el conflicto en la rama master!. Lorem ipsum dolor, 
+        sit amet consectetur adipisicing elit. Voluptatum voluptas error quo a deserunt recusandae, 
+        corrupti in molestiae, possimus nesciunt, maiores ipsa et enim quisquam sit suscipit nobis commodi porro?</h3>
 </body>
 </html>
